--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -3,7 +3,8 @@
 		<title>Rob's Books</title>
 	</head>
 	<body>
-		    <p>Hi there!</p>
-		      <p>It works</p>
+	    <div>
+		<h1><a href="/">Rob's Book Ordering System</a></h1>
+	    </div>
 	</body>
 </html>
