--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -6,5 +6,8 @@
 	    <div>
 		<h1><a href="/">Rob's Book Ordering System</a></h1>
 	    </div>
+	    <div>
+		    {{ posts }}
+	    </div>
 	</body>
 </html>
