--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -7,7 +7,7 @@
 		<h1><a href="/">Rob's Book Ordering System</a></h1>
 	    </div>
 	    <div>
-		    {{ posts }}
+		    {{ authors }}
 	    </div>
 	</body>
 </html>
