--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -7,7 +7,9 @@
 		<h1><a href="/">Rob's Book Ordering System</a></h1>
 	    </div>
 	    <div>
-		    {{ authors }}
+		    {% for author in authors %} 
+		      {{ authors }}
+		    {% endfor %}
 	    </div>
 	</body>
 </html>
