--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -8,7 +8,7 @@
 	    </div>
 	    <div>
 		    {% for author in authors %} 
-		      {{ authors }}
+		      {{ author }}
 		    {% endfor %}
 	    </div>
 	</body>
