--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -1,7 +1,9 @@
+{% load static %}
 <html>
 	<head>
            	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="{% static 'css/myapp.css' %}">
 		<title>Rob's Books</title>
 	</head>
 	<body>
@@ -9,11 +11,17 @@
 		<h1><a href="/">Rob's Book Ordering System</a></h1>
 	    </div>
 
-	    {% for author in authors %} 
-	        <div>
-		      {{ author }}
-		      <p>{{ linebreaksbr }}</p>
-		</div>
-	    {% endfor %}
+            <div class="content container">
+    		<div class="row">
+        		<div class="col-md-8">
+            			{% for author in authors %}
+                			<div class="author">
+						{{ author }}
+                    				<p>{{ linebreaksbr }}</p>
+                			</div>
+            			{% endfor %}
+        		</div>
+    		</div>
+	    </div>
 	</body>
 </html>
