Updated html files

--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -7,7 +7,7 @@
 		<title>Rob's Books</title>
 	</head>
 	<body>
-	    <div>
+	    <div class="page-header">
 		<h1><a href="/">Rob's Book Ordering System</a></h1>
 	    </div>
 
