Updated css file

--- a/myapp/static/css/myapp.css
+++ b/myapp/static/css/myapp.css
@@ -43,10 +43,10 @@ h1, h2, h3, h4 {
     margin-right: 20px;
 }
 
-.post {
+.author {
     margin-bottom: 70px;
 }
 
-.post h2 a, .post h2 a:visited {
+.author h2 a, .post h2 a:visited {
     color: #000000;
 }
