--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -7,7 +7,9 @@
 		<link rel="stylesheet" href="{% static 'css/myapp.css' %}">
 	</head>
 	<body>
+	   <div>
 		<h1><a href="/">Rob's Book Ordering System</a></h1>
+	   </div>
 
             <div class="content container">
     		<div class="row">
