--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -1,14 +1,15 @@
 {% load static %}
 <html>
 	<head>
-		<title>Rob's Books</title>
+		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+		<title>RKN Books</title>
            	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/myapp.css' %}">
 	</head>
 	<body>
 	   <div>
-		<h1><a href="/">Rob's Book Ordering System</a></h1>
+		<h1><a href="/">Book Ordering System</a></h1>
 	   </div>
 
             <div class="content container">
