--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -14,7 +14,7 @@
 
             			{% for author in authors %}
 					<div>
-						<h2><a href="">{{ author }}</a></h2>
+						{{ author }}
                     				<p>{{ linebreaksbr }}</p>
                 			</div>
             			{% endfor %}
