--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -1,11 +1,11 @@
-{% load staticfiles %}
+{% load static %}
 <html>
 	<head>
 		<title>RKN Books</title>
            	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="{% static "myapp/css/myapp.css" %}">
+		<link rel="stylesheet" type="text/css" href="{% static "myapp/css/myapp.css" %}">
 	</head>
 	<body>
 	   <div>
