--- a/myapp/templates/myapp/author_list.html
+++ b/myapp/templates/myapp/author_list.html
@@ -1,22 +1,10 @@
-{% load static from staticfiles %}
-<html>
-	<head>
-		<title>RKN Books</title>
-           	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/myapp.css' %}">
-	</head>
-	<body>
-	   <div class="page-header">
-		<h1><a href="/">Book Ordering System</a></h1>
-	   </div>
+{% extends 'myapp/base.html' %}
 
-            			{% for author in authors %}
- 					        <div class="date">
-						        {{ author }}
-                    		    <p>{{ linebreaksbr }}</p>
-                			</div>
-            			{% endfor %}
-	</body>
-</html>
+{% block content %}
+    {% for author in authors %}
+        <div class="date">
+            {{ author }}
+            <p>{{ linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
